# graphviz

./: .gitignore  .gitlab-ci.yml  .pylintrc  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPERS.md  Doxyfile.in  Makefile.am  README.md  autogen.sh  config-cmake.h.in  configure.ac  gen_version.py  graphviz.sln  requirements.txt  rpm_notes.txt
cmd/dot/: CMakeLists.txt  Makefile.am  dot.1  dot.c  dot.vcxproj  dot_builtins.c  dot_builtins.cpp
cmd/edgepaint/: CMakeLists.txt  Makefile.am  edgepaint.vcxproj  edgepaintmain.c
cmd/gvedit/: CMakeLists.txt  Makefile.am  csettings.cpp  imageviewer.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mdichild.cpp
cmd/gvmap/: CMakeLists.txt  Makefile.am  cluster.c  country_graph_coloring.c  gvmap.c  gvmap.vcxproj  make_map.c  make_map.h  power.c  power.h
cmd/mingle/: CMakeLists.txt  Makefile.am  mingle.vcxproj  mingle.vcxproj.filters  minglemain.c  minglemain.cpp
cmd/smyrna/: CMakeLists.txt  Makefile.am  draw.c  glexpose.c  gltemplate.c  gltemplate.h  glutrender.c  glutrender.h  gvprpipe.c  gvprpipe.h  hier.c  hier.h  hotkeymap.c  main.c  polytess.c  polytess.h  selectionfuncs.c  selectionfuncs.h  smyrna.vcxproj  smyrna_utils.c  smyrna_utils.h  smyrnadefs.h  support.h  topfisheyeview.c  topfisheyeview.h  topviewfuncs.c  topviewfuncs.h  tvnodes.c  viewport.c  viewport.h  viewportcamera.c  viewportcamera.h
cmd/tools/: CMakeLists.txt  Makefile.am  acyclic.c  acyclic.vcxproj  bcomps.c  bcomps.vcxproj  ccomps.c  ccomps.vcxproj  colorxlate.h  colxlate.c  convert.h  cvtgxl.c  dijkstra.c  dijkstra.vcxproj  gc.c  gml2gv.c  gml2gv.vcxproj  gmlparse.y  gmlscan.l  graph_generator.c  graph_generator.h  graphml2gv.c  graphml2gv.vcxproj  gv2gml.c  gv2gml.vcxproj  gv2gxl.c  gvcolor.c  gvgen.c  gvgen.vcxproj  gvpack.c  gvpack.cpp  gvpack.vcxproj  gvpack.vcxproj.filters  gxl2gv.c  gxl2gv.vcxproj  matrix_market.c  matrix_market.h  mm2gv.c  mm2gv.vcxproj  mmio.c  (+8 more)
contrib/diffimg/: CMakeLists.txt  Makefile.am  diffimg.c  diffimg.vcxproj
contrib/prune/: CMakeLists.txt  Makefile.am  generic_list.c  generic_list.h  prune.c  prune.vcxproj
doc/: Makefile.am  index.html
doc/info/: Makefile.am
doc/infosrc/: .Makefile.swp  Makefile  mklang  requirements.txt  templates.py
doc/libgraph/: sccmap.c
doc/schema/: Makefile.am
lib/ast/: CMakeLists.txt  Makefile.am  ast.h  ast.vcxproj  ast.vcxproj.filters  chrtoi.c  compat_unistd.h  error.c  fmtesc.c  hashkey.h  pathaccess.c  pathcanon.c  pathfind.c  pathpath.c  sfstr.h  stresc.c  strmatch.c
lib/circogen/: CMakeLists.txt  Makefile.am  block.c  blockpath.c  blockpath.h  blocktree.c  circpos.c  circular.c  circular.h  circularinit.c  deglist.c  deglist.h  edgelist.c  edgelist.h  gvcircogen.vcxproj  gvcircogen.vcxproj.filters  nodelist.c  nodelist.h  nodeset.h
lib/common/: CMakeLists.txt  Makefile.am  args.c  arith.h  arrows.c  boxes.h  colorprocs.h  colxlate.c  const.h  ellipse.c  emit.c  geom.c  geomprocs.h  globals.h  htmllex.c  htmlparse.y  htmltable.c  htmltable.h  input.c  intset.c  labels.c  logic.h  macros.h  memory.c  memory.h  ns.c  output.c  pointset.c  pointset.h  postproc.c  psusershape.c  render.h  routespl.c  shapes.c  splines.c  taper.c  textspan.c  textspan_lut.c  textspan_lut.h  timing.c  (+5 more)
lib/dotgen/: CMakeLists.txt  acyclic.c  aspect.c  class2.c  cluster.c  compound.c  conc.c  decomp.c  dotinit.c  dotprocs.h  dotsplines.c  fastgr.c  flat.c  gvdotgen.vcxproj  mincross.c  position.c  rank.c  sameport.c
lib/edgepaint/: CMakeLists.txt  Makefile.am  edge_distinct_coloring.c  edge_distinct_coloring.h  edgepaintlib.vcxproj  furtherest_point.c  furtherest_point.h  intersection.h  lab.c  lab.h  lab_gamut.def  lab_gamut.h  lab_gamut.vcxproj  node_distinct_coloring.c  node_distinct_coloring.h
lib/fdpgen/: CMakeLists.txt  Makefile.am  clusteredges.c  comp.c  dbg.c  dbg.h  fdpinit.c  grid.c  grid.h  gvfdpgen.vcxproj  layout.c  tlayout.c  tlayout.h  xlayout.c
lib/glcomp/: CMakeLists.txt  Makefile.am  glcomp.vcxproj  glcompbutton.c  glcompbutton.h  glcompdefs.h  glcompfont.c  glcompfont.h  glcompimage.c  glcompimage.h  glcomplabel.c  glcomplabel.h  glcomppanel.c  glcomppanel.h  glcompset.c  glcompset.h  glcomptextpng.c  glcomptexture.c  glcomptexture.h  glpangofont.c  glpangofont.h  glutils.c  glutils.h  opengl.h
lib/gvpr/: CMakeLists.txt  Makefile.am  actions.c  actions.h  compile.c  compile.h  gprstate.c  gprstate.h  gvpr.c  gvpr.h  gvprlib.vcxproj  parse.c  queue.c  queue.h  trieFA.h
lib/label/: CMakeLists.txt  Makefile.am  index.c  index.h  node.c  node.h  nrtmain.c  rectangle.c  split.q.c  xlabels.c  xlabels.h
lib/mingle/: CMakeLists.txt  Makefile.am  agglomerative_bundling.c  agglomerative_bundling.cpp  agglomerative_bundling.h  edge_bundling.c  ink.c  (+11 more)
plugin/: CMakeLists.txt  Makefile.am
tests/: 144_no_ortho.dot  CMakeLists.txt  Makefile.am  graphviz_edge.cpp  graphviz_edge.h  graphviz_graph.cpp  graphviz_graph.h  graphviz_node.cpp  graphviz_node.h  gvtest.py  rtest.py  svg_analyzer.cpp  svg_analyzer.h  svg_analyzer_interface.h  svg_element.cpp  svg_element.h  svgpp_context.cpp  svgpp_context.h  svgpp_document_traverser.cpp  test_GVContext_render_svg.cpp  test_c_utils.py  test_clusters.cpp  test_edge_color.cpp  test_edge_fillcolor.cpp  test_edge_node_overlap_all_edge_arrows.cpp  test_edge_node_overlap_all_node_shapes.cpp  test_edge_node_overlap_all_primitive_edge_arrows.cpp  test_edge_node_overlap_box_edge_arrow.cpp  test_edge_node_overlap_box_edge_arrow_various_arrowsizes.cpp  test_edge_node_overlap_cylinder_node_shape.cpp  test_edge_node_overlap_diamond_edge_arrow.cpp  test_edge_node_overlap_diamond_edge_arrow_various_arrowsizes.cpp  test_edge_node_overlap_dot_edge_arrow.cpp  test_edge_node_overlap_dot_edge_arrow_various_arrowsizes.cpp  test_edge_node_overlap_ellipse_node_shapes_except_point.cpp  test_edge_node_overlap_normal_and_inv_edge_arrows.cpp  test_edge_node_overlap_normal_and_inv_edge_arrows_all_modifiers.cpp  test_edge_node_overlap_normal_and_inv_edge_arrows_various_arrowsizes.cpp  test_edge_node_overlap_point_node_shape.cpp  test_edge_node_overlap_polygon_node_shapes.cpp  (+31 more)
(+615 files in other folders)
