add_subdirectory(core)
add_subdirectory(devil)
add_subdirectory(dot_layout)
add_subdirectory(gd)
add_subdirectory(gdiplus)
add_subdirectory(gdk)
add_subdirectory(glitz)
add_subdirectory(gs)
add_subdirectory(gtk)
add_subdirectory(neato_layout)
add_subdirectory(pango)
add_subdirectory(poppler)
add_subdirectory(rsvg)
add_subdirectory(webp)
add_subdirectory(xlib)
